# pallas-dotnet

./: pallas-dotnet.sln
src/pallas-dotnet/: Class1.cs  NetworkMagic.cs  NextResponseAction.cs  NodeClient.cs  PallasDotnetWrapper.cs  README.md  Utils.cs  pallas-dotnet.csproj  publish.sh
src/pallas-dotnet-cli/: ConsoleHelper.cs  NextResponseAction.cs  Program.cs  pallas-dotnet-cli.csproj
src/pallas-dotnet-rs/: Cargo.toml
src/pallas-dotnet-rs/src/: lib.rs
src/pallas-dotnet-test/: UnitTest1.cs  pallas-dotnet-test.csproj
src/pallas-dotnet/Models/: Address.cs  Block.cs  Hash.cs  NextResponse.cs  NextResponseAction.cs  Point.cs  TransactionBody.cs  TransactionInput.cs  TransactionOutput.cs  Value.cs
