[package]
name = "pallas-dotnet-rs"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pallas = "0.20.0"
linkme = "0.2.7"
rnet = "0.3.1"
tokio = { version = "1.34.0", features = ["full", "rt-multi-thread" ] }
lazy_static = "1.4.0"
